<resources>
    <string name="app_name">BooksSherlock</string>
    <string name="bookDetails_background">Background Img</string>
    <string name="bookDetails_Title">Missing You</string>
    <string name="bookDetails_cover">Book Cover</string>
    <string name="user_profile_imgUser_contentDescription">User Avatar</string>
    <string name="user_profile_txtUserName">John SNOW</string>
    <string name="user_profile_txtUserBIO">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="user_profile_txtGeneralSettings">General Settings</string>
    <string name="user_profile_imgSettings_contentDescription">Settings</string>
    <string name="user_profile_txtSettings">Settings</string>
    <string name="user_profile_imgSignOut_contentDescription">Sign Out</string>
    <string name="user_profile_txtSignOut">Sign out / Unregister</string>
    <string name="user_profile_settings_txtStreet">176 Poor House Lane</string>
    <string name="user_profile_settings_txtCityZip">Springfield Gardens, NY 11413</string>
    <string name="user_profile_settings_btnSelect">Select >></string>
    <string name="user_profile_settings_img_contentDescription">Enter a new address</string>
    <string name="user_profile_settings_txtNewAddress">Enter a new address</string>
    <string name="user_profile_settings_inputFirstName">First name</string>
    <string name="user_profile_settings_inputLastName">Last name</string>
    <string name="user_profile_settings_inputAddress">Address</string>
    <string name="user_profile_settings_inputZip">Zip code</string>
    <string name="user_profile_settings_inputCity">City</string>
    <string name="user_profile_settings_btnContinue">Continue</string>
    <string name="bookDetails_author">By Harlan Coben</string>
    <string name="bookDetails_publicationDate">Published March 18th 2014 by Dutton</string>
    <string name="bookDetails_description">It is a profile, like all the others on the online dating site. But as NYPD Detective Kat Donovan focuses on the accompanying picture, she feels her whole world explode, as emotions she’s ignored for decades come crashing down on her. Staring back at her is her ex-fiancé Jeff, the man who shattered her heart—and who she hasn’t seen in 18 years.

Kat feels a spark, wondering if this might be the moment when past tragedies recede and a new world opens up to her. But when she reaches out to the man in the profile, her reawakened hope quickly darkens into suspicion and then terror as an unspeakable conspiracy comes to light, in which monsters prey upon the most vulnerable. </string>
    <string name="bookDetails_resume">Resume</string>
    <string name="bookDetails_btnSeeOffer">See Offers</string>
    <string name="myBooks_avatar">Image Avatar</string>
    <string name="myBooks_userName">John Snow</string>
    <string name="myBooks_emailAddress">johnsnow8991@somewhere.com</string>
    <string name="myBooks_btnSeller">Seller</string>
    <string name="myBooks_btnBuyer">Buyer</string>


    <string name="cart_title">Your Shopping Cart</string>
    <string name="cart_btnProcess">Finalize Your Purchase</string>
    <string name="cart_btnDelete">Delete</string>
    <string name="cart_bookPrice">Price: $19.99</string>
    <string name="cart_totalPrice">Total Price: $30.99</string>
    <string name="bookListLabel">All Books</string>
    <string name="search_title">Title</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="myBook">My Books</string>
    <string name="cards">My Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Sign Up</string>
    <string name="re_type_password">Confirm your password</string>
    <string name="your_name">Username</string>
    <string name="hint">Search for Book</string>
    <string name="upload">Upload a book</string>
    <string name="chooseBook">Choose Book</string>
    <string name="choosePrice">Choose Price</string>
    <string name="uploadBook">Upload new book</string>
    <string name="uploadBtn">Upload</string>
    <string name="shop">Shop</string>
    <string name="zdarova">Zdarova</string>
</resources>
