<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/labelEmail"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="51dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_email"
        android:padding="24dp"
        android:text="@string/your_name"
        android:textColor="@color/orange" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/labelPass"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/e_mail"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        android:backgroundTint="@color/white" />

    <TextView
        android:id="@+id/labelPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/et_password"
        android:text="@string/password"
        android:padding="20dp"
        android:textColor="@color/orange" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:textSize="15sp"
        android:backgroundTint="@color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="104dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        android:textColor="@android:color/white" />


</RelativeLayout>