<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/userinfo_background">

    <ImageView
        android:id="@+id/imgAavatar"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="124dp"
        android:contentDescription="@string/myBooks_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mybookavator" />

    <TextView
        android:id="@+id/textUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/myBooks_userName"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgAavatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEmailAddress"
        android:layout_width="196dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/myBooks_emailAddress"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/imgAavatar"
        app:layout_constraintTop_toBottomOf="@+id/textUserName" />

    <Button
        android:id="@+id/btnBuyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:background="#1225B8"
        android:text="@string/myBooks_btnBuyer"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAavatar"
        tools:textSize="20sp" />

    <Button
        android:id="@+id/btnSeller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:background="#FFD200"
        android:text="@string/myBooks_btnSeller"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAavatar" />

    <include layout="@layout/bottom_navigation_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>