<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.UserProfileSettings">

    <include layout="@layout/bottom_navigation_bar" />

    <LinearLayout
        android:id="@+id/linearLayoutAddress"
        android:layout_width="269dp"
        android:layout_height="100dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="64dp"
        android:background="#F8F8F8"
        android:elevation="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/user_profile_txtUserName"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtStreet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/user_profile_settings_txtStreet"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCityZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:text="@string/user_profile_settings_txtCityZip"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSelect"
        android:layout_width="146dp"
        android:layout_height="38dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="88dp"
        android:background="@color/user_profile_settings_btnColor"
        android:text="@string/user_profile_settings_btnSelect"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>